test/Harper/Tests/Good/Scoping_NestedBlocks.har
main :: Integer;
main = {
    var (n :: Integer) = 0;
    var (result :: Integer) = 0;

    {
        (n :: Integer) = 1;
        {
            (n :: Integer) = 2;
            {
                var (n :: Integer) = 3;
                {
                    (n :: Integer) = 4;
                    result += n;
                }
                result += n;
            }
            result += n;
        }
        result += n;
    }
    result += n;

    return result;
};