test/Harper/Tests/Bad/CallingCurrentOnAnEmptyIteratorBeforeNext.har
iterate :: Iterator Integer;
iterate = {
    yield return;
};

main :: Integer;
main = iterate.current;